--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -120,7 +120,7 @@
 </ul>
 
 <div class="main-side-bar">
-    <a href="individualInfo.html"><img src="assets/i/add.png" class="main-button"></a>
+    <a href="addDatings.html"><img src="assets/i/add.png" class="main-button"></a>
 </div>
 
 <!--[if (gte IE 9)|!(IE)]><!-->
@@ -146,7 +146,10 @@
                             <img src="{{avatarUrl}}" class="am-radius main-radius"/>
 
                             <div class="main-gray">
-                                <div class="main-name">{{nickName}}<p class=""></p></div>
+                                <div class="main-name">{{nickName}}
+                                    <span>20岁</span>
+
+                                    <p class="am-icon-venus main-boy"></p></div>
                             </div>
                         </div>
                     </div>
