--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -149,14 +149,14 @@
                                 <div class="main-name">{{nickName}}
                                     <span>20岁</span>
 
-                                    <p class="am-icon-venus main-boy"></p></div>
+                                    <p class="am-icon-mars main-boy"></p></div>
                             </div>
                         </div>
                     </div>
                     <div class="am-u-sm-8 main-right">
                         <div class="main-location">地点：{{location}}</div>
-                        <div class="main-time">{{diffTime}} 发布<img src="assets/i/zaodong.jpg" class="main-logo"/></div>
-                        <div class="main-people"><img src="assets/i/people.png" class="main-icon-people">{{currentPeople}}人｜{{peopleCount}}人</div>
+                        <div class="main-time">{{diffTime}} 发布</div>
+                        <div class="main-people"><img src="assets/i/people.png" class="main-icon-people"><span>单独约</span></div>
                         <div><span class="main-item">{{sportName}}</span> <span class="main-start-time">{{startTime}}-{{endTime}}</span></div>
                         <div>
                             <img src="assets/i/sports/run.png" class="main-sports"/>
@@ -172,7 +172,7 @@
                     <div class="am-u-sm-9 main-9">{{content}}</div>
                     <div class="am-u-sm-3 main-3">
                         <div class="main-button">
-                            <button type="button" class="am-btn am-btn-success am-round am-btn-xs main-danger">来晚了</button>
+                            <button type="button" class="am-btn am-btn-success am-round am-btn-xs main-green" id="main-confirm">一起躁</button>
                         </div>
                     </div>
                 </div>
@@ -180,7 +180,6 @@
         </li>
     </ul>
     {{/each}}
-
 </script>
 
 </body>
