--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -37,31 +37,55 @@
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body class="ii-body">
-<div class="ii-container">
+<div class="ii-container" id="ii-main">
+
+</div>
+
+<!--[if (gte IE 9)|!(IE)]><!-->
+<script src="assets/js/jquery.min.js"></script>
+<!--<![endif]-->
+<!--[if lte IE 8 ]>
+<script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
+<script src="assets/js/amazeui.ie8polyfill.min.js"></script>
+<![endif]-->
+<script src="assets/js/amazeui.min.js"></script>
+<script src="assets/js/common.js"></script>
+<script src="assets/js/handlebars.min.js"></script>
+<script src="assets/js/individualInfo.js"></script>
+<script type="text/x-handlebars-template" id="individualInfo">
     <div class="ii-info">
         <ul class="am-list am-list-static am-list-border">
             <li>
                 <div class="ii-avatar">
-                    <img src="assets/i/avatar-offical.jpg" class="am-radius"/>
+                    <img src="{{avatarUrl}}" class="am-radius"/>
 
                     <div class="ii-title">头像</div>
                 </div>
             </li>
 
             <li>
-                <span class="am-badge ii-badge">Emily Blaning</span>
+                <span class="am-badge ii-badge">{{nickName}}</span>
                 昵称
             </li>
             <li>
-                <span class="am-badge ii-badge">1234567890</span>
+                <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="tel-btn"></a></span>
+                <span class="am-badge ii-badge am-badge-danger" id="text-tel">{{tel}}</span>
+                手机号
+            </li>
+            <li>
+                <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="weChat-btn"></a></span>
+                <span class="am-badge ii-badge am-badge-danger" id="text-weChat">{{weChat}}</span>
                 微信号
             </li>
             <li>
-                <span class="am-badge ii-badge"><a class="am-icon-chevron-right" href="timeLine.html"></a></span>
+                <a class="ii-href" href="timeLine.html"></a>
+                <span class="am-badge ii-badge"><i class="am-icon-chevron-right"></i></span>
                 时光轴
             </li>
             <li>
-                <span class="am-badge ii-badge"><a class="am-icon-chevron-right" href="datingRequest.html"></a></span>
+                <a class="ii-href" href="datingRequest.html"></a>
+                <span class="am-badge ii-badge"><i class="am-icon-chevron-right" href="datingRequest.html"></i></span>
                 我的约伴
             </li>
         </ul>
@@ -70,22 +94,22 @@
         <ul class="am-list am-list-static am-list-border">
             <li>
                 <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="gender-btn"></a></span>
-                <span class="am-badge ii-badge am-badge-danger" id="text-gender">女</span>
+                <span class="am-badge ii-badge am-badge-danger" id="text-gender"></span>
                 性别
             </li>
             <li>
                 <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="age-btn"></a></span>
-                <span class="am-badge ii-badge am-badge-danger" id="text-age">20岁</span>
+                <span class="am-badge ii-badge am-badge-danger" id="text-age">{{age}}岁</span>
                 年龄
             </li>
             <li>
                 <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="height-btn"></a></span>
-                <span class="am-badge ii-badge am-badge-danger" id="text-height">165cm</span>
+                <span class="am-badge ii-badge am-badge-danger" id="text-height">{{height}}cm</span>
                 身高
             </li>
             <li>
                 <span class="am-badge ii-badge"><a class="am-icon-chevron-right" id="weight-btn"></a></span>
-                <span class="am-badge ii-badge am-badge-danger" id="text-weight">45kg</span>
+                <span class="am-badge ii-badge am-badge-danger" id="text-weight">{{weight}}kg</span>
                 体重
             </li>
             <li style="height: 56px">
@@ -98,66 +122,92 @@
             </li>
         </ul>
     </div>
-</div>
-
-<div class="am-modal am-modal-prompt" tabindex="-1" id="ii-gender">
-    <div class="am-modal-dialog">
-        <div class="am-modal-bd">
-            请选择性别
-            <input type="text" class="am-modal-prompt-input">
-        </div>
-        <div class="am-modal-footer">
-            <span class="am-modal-btn" data-am-modal-cancel>取消</span>
-            <span class="am-modal-btn" data-am-modal-confirm>提交</span>
-        </div>
-    </div>
-</div>
-<div class="am-modal am-modal-prompt" tabindex="-1" id="ii-age">
-    <div class="am-modal-dialog">
-        <div class="am-modal-bd">
-            请输入对方年龄
-            <input type="text" class="am-modal-prompt-input">
-        </div>
-        <div class="am-modal-footer">
-            <span class="am-modal-btn" data-am-modal-cancel>取消</span>
-            <span class="am-modal-btn" data-am-modal-confirm>提交</span>
+    <div class="am-modal am-modal-prompt" tabindex="-1" id="ii-tel">
+        <div class="am-modal-dialog">
+            <div class="am-modal-bd">
+                请输入手机号
+                <input type="tel" class="am-modal-prompt-input am-form-field am-radius" placeholder="{{tel}}">
+            </div>
+            <div class=" am-modal-footer">
+                <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+                <span class="am-modal-btn" data-am-modal-confirm>提交</span>
+            </div>
         </div>
     </div>
-</div>
-<div class="am-modal am-modal-prompt" tabindex="-1" id="ii-height">
-    <div class="am-modal-dialog">
-        <div class="am-modal-bd">
-            请输入身高（单位：厘米）
-            <input type="text" class="am-modal-prompt-input">
-        </div>
-        <div class="am-modal-footer">
-            <span class="am-modal-btn" data-am-modal-cancel>取消</span>
-            <span class="am-modal-btn" data-am-modal-confirm>提交</span>
-        </div>
-    </div>
-</div>
-<div class="am-modal am-modal-prompt" tabindex="-1" id="ii-weight">
-    <div class="am-modal-dialog">
-        <div class="am-modal-bd">
-            请输入体重（单位：公斤）
-            <input type="text" class="am-modal-prompt-input">
-        </div>
-        <div class="am-modal-footer">
-            <span class="am-modal-btn" data-am-modal-cancel>取消</span>
-            <span class="am-modal-btn" data-am-modal-confirm>提交</span>
+    <div class="am-modal am-modal-prompt" tabindex="-1" id="ii-weChat">
+        <div class="am-modal-dialog">
+            <div class="am-modal-bd">
+                请输入微信号
+                <input type="text" class="am-modal-prompt-input am-form-field am-radius" placeholder="{{weChat}}">
+            </div>
+            <div class=" am-modal-footer">
+                <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+                <span class="am-modal-btn" data-am-modal-confirm>提交</span>
+            </div>
         </div>
     </div>
-</div>
-
-<!--[if (gte IE 9)|!(IE)]><!-->
-<script src="assets/js/jquery.min.js"></script>
-<!--<![endif]-->
-<!--[if lte IE 8 ]>
-<script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
-<script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
-<script src="assets/js/amazeui.ie8polyfill.min.js"></script>
-<![endif]-->
-<script src="assets/js/amazeui.min.js"></script>
-<script src="assets/js/individualInfo.js"></script>
+    <div class="am-modal am-modal-prompt" tabindex="-1" id="ii-gender">
+        <div class="am-modal-dialog">
+            <div class="am-modal-bd">
+                <label class="am-radio-inline">
+                    <input type="radio"  value="Male" name="gender">男
+                </label>
+                <label class="am-radio-inline">
+                    <input type="radio" value="Female" name="gender">女
+                </label>
+            </div>
+            <div class=" am-modal-footer">
+                <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+                <span class="am-modal-btn" data-am-modal-confirm>提交</span>
+            </div>
+        </div>
+    </div>
+    <div class="am-modal am-modal-prompt" tabindex="-1" id="ii-age">
+        <div class="am-modal-dialog">
+            <div class="am-modal-bd">
+                请输入年龄
+                <input type="tel" class="am-modal-prompt-input am-form-field am-radius" placeholder="{{age}}">
+            </div>
+            <div class=" am-modal-footer">
+                <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+                <span class="am-modal-btn" data-am-modal-confirm>提交</span>
+            </div>
+        </div>
+    </div>
+    <div class="am-modal am-modal-prompt" tabindex="-1" id="ii-height">
+        <div class="am-modal-dialog">
+            <div class="am-modal-bd">
+                请输入身高（单位：cm）
+                <input type="number" class="am-modal-prompt-input am-form-field am-radius" placeholder="{{height}}">
+            </div>
+            <div class=" am-modal-footer">
+                <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+                <span class="am-modal-btn" data-am-modal-confirm>提交</span>
+            </div>
+        </div>
+    </div>
+    <div class="am-modal am-modal-prompt" tabindex="-1" id="ii-weight">
+        <div class="am-modal-dialog">
+            <div class="am-modal-bd">
+                请输入体重（单位：kg）
+                <input type="number" class="am-modal-prompt-input am-form-field am-radius" placeholder="{{weight}}">
+            </div>
+            <div class="am-modal-footer">
+                <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+                <span class="am-modal-btn" data-am-modal-confirm>提交</span>
+            </div>
+        </div>
+    </div>
+    <div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
+        <div class="am-modal-dialog">
+            <div class="am-modal-bd" id="status">
+               修改成功！
+            </div>
+            <div class="am-modal-footer">
+                <span class="am-modal-btn">确定</span>
+            </div>
+        </div>
+    </div>
+</script>
 </body>
 </html>
