--- a/src/main/webapp/timeLine.html
+++ b/src/main/webapp/timeLine.html
@@ -39,7 +39,13 @@
 </head>
 <body>
 <div id="tl-title"></div>
-<div id="tl-main"></div>
+<div>
+    <div class="tl-main">
+        <ul class="cbp_tmtimeline" id="tl-main">
+        </ul>
+    </div>
+</div>
+
 <!--[if (gte IE 9)|!(IE)]><!-->
 <script src="assets/js/jquery.min.js"></script>
 <!--<![endif]-->
@@ -80,26 +86,22 @@
 </script>
 <script type="text/x-handlebars-template" id="timeLine">
     {{#each this}}
-    <div class="tl-main">
-        <ul class="cbp_tmtimeline">
-            <li>
-                <div class="cbp_tmtime"><span>{{month}}/</span>{{day}}</div>
-                <div class="cbp_tmicon">
-                    <img src="assets/i/sports/run.png">
-                </div>
-                <div class="cbp_tmlabel">
-                    <div><span>{{location}}</span>
+    <li>
+        <div class="cbp_tmtime"><span>{{month}}/</span>{{day}}</div>
+        <div class="cbp_tmicon">
+            <img src="assets/i/sports/run.png">
+        </div>
+        <div class="cbp_tmlabel">
+            <div><span>{{location}}</span>
 
-                        <div class="tl-people">
-                            <img src="assets/i/people.png" class="tl-icon-people"><span class="tl-green">1/1</span>
-                        </div>
-                    </div>
-                    <div><span class="tl-item">{{sportName}}</span> <span class="tl-start-time">{{startTime}}-{{endTime}}</span>
-                    </div>
+                <div class="tl-people">
+                    <img src="assets/i/people.png" class="tl-icon-people"><span class="tl-green">1/1</span>
                 </div>
-            </li>
-        </ul>
-    </div>
+            </div>
+            <div><span class="tl-item">{{sportName}}</span> <span class="tl-start-time">{{startTime}}-{{endTime}}</span>
+            </div>
+        </div>
+    </li>
     {{/each}}
 </script>
 </body>
