--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -118,9 +118,8 @@
         <!--</div>-->
     <!--</li>-->
 </ul>
-
 <div class="main-side-bar">
-    <a href="addDatings.html"><img src="assets/i/add.png" class="main-add"></a>
+    <a href="#" id="imgUrl"><img src="assets/i/add.png" class="main-add"></a>
 </div>
 
 <!--[if (gte IE 9)|!(IE)]><!-->
