--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -79,12 +79,12 @@
                 微信号
             </li>
             <li>
-                <a class="ii-href" href="timeLine.html"></a>
+                <a class="ii-href" href="timeLine.html?userId={{id}}"></a>
                 <span class="am-badge ii-badge"><i class="am-icon-chevron-right"></i></span>
                 时光轴
             </li>
             <li>
-                <a class="ii-href" href="datingRequest.html"></a>
+                <a class="ii-href" href="datingRequest.html?userId={{id}}"></a>
                 <span class="am-badge ii-badge"><i class="am-icon-chevron-right" href="datingRequest.html"></i></span>
                 我的约伴
             </li>
