--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -142,7 +142,7 @@
                 <div class="am-g main-g">
                     <div class="am-u-sm-4 main-left">
                         <div class="main-center">
-                            <img src="{{avatarUrl}}" class="am-radius main-radius"/>
+                            <a href="timeLine.html?userId={{userId}}"><img src="{{avatarUrl}}" class="am-radius main-radius"/></a>
 
                             <div class="main-gray">
                                 <div class="main-name">{{nickName}}
